--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ package
 services/chatkit/.venv
 services/chatkit/uploads
 services/chatkit/__pycache__
+services/chatkit/data
+__pycache__
+.ace-tool/**
